--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 .vscode/
 /vis
 /infer
-/*.sh
 /runs
 /video_exp
 /model/segment_anything_2/sam2/_C.so
 /model/segment_anything_2/build
 /evf-sam2
+**/*.pyd
