--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ sentencepiece
 einops==0.4.1
 fastapi==0.100.1
 markdown2==2.4.10
-numpy
+numpy==1.26.4
 openai==0.27.8
 opencv_python
 Pillow==9.4.0
@@ -32,5 +32,5 @@ torchmetrics==0.7.3
 deepspeed==0.14.5
 pycocoevalcap
 torchscale==0.2.0
-hydra-core
+hydra-core==1.3.2
 accelerate
