--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,143 @@
-# --extra-index-url https://download.pytorch.org/whl/cu117
-# torch==2.0.1
-# torchvision==0.15.2
-packaging
-sentencepiece
+accelerate==0.25.0
+aiofiles==23.2.1
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+altair==5.5.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.4.0
+async-timeout==4.0.3
+attrs==24.2.0
+Authlib==1.3.2
+bitsandbytes==0.43.3
+blobfile==3.0.0
+certifi==2024.7.4
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.0.4
+contourpy==1.3.0
+cryptography==44.0.0
+cycler==0.12.1
+datasets==2.21.0
+dill==0.3.8
 einops==0.4.1
+exceptiongroup==1.2.2
+fairscale==0.4.0
 fastapi==0.100.1
-markdown2==2.4.10
-numpy==1.26.4
-openai==0.27.8
-opencv_python
-Pillow==9.4.0
-pycocotools==2.0.6
-ray==2.6.1
-Requests==2.31.0
-shortuuid==1.0.11
-tqdm
-transformers
-uvicorn==0.23.2
-scipy==1.11.2
-bitsandbytes==0.41.1
-timm
-blobfile
-mypy
-pytest
-requests
-tensorboardX
-ftfy
-opencv-python
-pyarrow
-torchmetrics==0.7.3
-deepspeed==0.14.5
-pycocoevalcap
-torchscale==0.2.0
+ffmpy==0.4.0
+filelock==3.15.4
+fonttools==4.53.1
+frozenlist==1.4.1
+fsspec==2024.6.1
+ftfy==6.2.3
+gradio==4.37.2
+gradio_client==1.0.2
+grpcio==1.66.1
+h11==0.14.0
+hf_transfer==0.1.8
+httpcore==1.0.5
+httpx==0.27.2
+huggingface-hub==0.24.6
 hydra-core==1.3.2
-accelerate
+idna==3.8
+importlib_resources==6.4.4
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+lxml==5.3.0
+markdown-it-py==3.0.0
+markdown2==2.4.10
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+mdurl==0.1.2
+mpmath==1.3.0
+msgpack==1.0.8
+multidict==6.0.5
+multiprocess==0.70.16
+mypy==1.11.2
+mypy-extensions==1.0.0
+narwhals==1.16.0
+networkx==3.3
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.20
+nvidia-nvtx-cu12==12.1.105
+omegaconf==2.3.0
+openai==0.27.8
+opencv-python==4.8.0.74
+orjson==3.10.7
+packaging==24.1
+pandas==2.2.2
+Pillow==9.4.0
+pluggy==1.5.0
+protobuf==3.20.3
+psutil==5.9.8
+pyarrow==17.0.0
+pycocoevalcap==1.2
+pycocotools==2.0.6
+pycparser==2.22
+pycryptodomex==3.20.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pyDeprecate==0.3.2
+pydub==0.25.1
+Pygments==2.18.0
+pyparsing==3.1.4
+pytest==8.3.2
+python-dateutil==2.9.0.post0
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.2
+ray==2.6.1
+referencing==0.35.1
+regex==2024.7.24
+requests>=2.32.2
+rich==13.8.0
+rpds-py==0.20.0
+ruff==0.6.3
+safetensors==0.4.4
 scenedetect[opencv]==0.6.6
-pydantic==2.10.6
+scipy==1.11.2
+semantic-version==2.10.0
+sentencepiece==0.2.0
+shellingham==1.5.4
+shortuuid==1.0.11
+six==1.16.0
+sniffio==1.3.1
+spaces==0.30.4
+starlette==0.27.0
+sympy==1.13.2
+tensorboardX==2.6.2.2
+timm==0.6.13
+tokenizers==0.13.3
+tomli==2.0.1
+tomlkit==0.12.0
+torch==2.4.0
+torchmetrics==0.7.3
+torchscale==0.3.0
+torchvision==0.19.0
+tqdm==4.66.5
+transformers==4.31.0
+triton==3.0.0
+typer==0.12.5
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+uvicorn==0.23.2
+wcwidth==0.2.13
+websockets==11.0.3
+xxhash==3.5.0
+yarl==1.9.4
